kubernetes/catalog/adminer/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adminer
  namespace: adminer
  labels:
    app.kubernetes.io/name: adminer
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adminer.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: adminer
          port: 8080
  tls:
    secretName: int-rlservers-com-tls
